[package]
name = "omvdecoder"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
binrw = "0.13.3"
kmpsearch = "1.0.0"
memmap = "0.7.0"
theorafile-rs = "0.1.2"
image = "0.25.1"
openh264 = "0.6.0"
minimp4 = { git = "https://github.com/xmoezzz/minimp4.rs" }

log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
which = "*"